--- a/config/routes.yml
+++ b/config/routes.yml
@@ -5,3 +5,9 @@ demogrid_admin_products:
         _controller: 'DemoGrid\Controller\Admin\ProductController::listingAction'
          # small hack to make Modules active on side menu when our page is rendered
         _legacy_controller: AdminModules
+
+demogrid_admin_products_search:
+    path: demo-grid/products
+    methods: [POST]
+    defaults:
+        _controller: 'DemoGrid\Controller\Admin\ProductController::listingSearchAction'
