--- a/config/services.yml
+++ b/config/services.yml
@@ -18,6 +18,7 @@ services:
         parent: 'prestashop.core.grid.abstract_query_builder'
         arguments:
             - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
+            - "@=service('prestashop.adapter.legacy.context').getContext().shop.id"
         public: true
 
     # Configure grid data provider to use our query builder that we registered above
